--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@
 name: PurePerms
 main: _64FF00\PurePerms\PurePerms
 version: "1.4.0-INDEV"
-api: [1.13.0, 2.0.0]
+api: [1.13.0, 2.0.0, 3.0.0-ALPHA4]
 load: POSTWORLD
 author: "64FF00 & ProjectInfinity"
 website: https://github.com/PurePlugins/PurePerms
@@ -50,6 +50,8 @@ permissions:
             description: "Allows you to remove a permission from the user."
           pperms.command.usrinfo:
             description: "Allows you to see info about a user."
+          pperms.command.resetall:
+            description: "Allows you to reset ALL players data!"
       pperms.noeul:
         description: "Allows you to access all 'Noeul' related features."
         children:
